force-app/main/default/objects/Contact/fields/Added_to_company_email_groups_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Added_to_company_email_groups_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Company Email Groups: For IT Team</label>
    <type>Checkbox</type>
</CustomField>