force-app/main/default/objects/Contact/fields/Added_to_WhatsApp_Group_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Added_to_WhatsApp_Group_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to WhatsApp Group: For HR Team</label>
    <type>Checkbox</type>
</CustomField>