force-app/main/default/objects/Contact/fields/Address_Details_Check__c.field-meta.xml
<CustomField>
    <fullName>Address_Details_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Details Check</label>
    <type>Checkbox</type>
</CustomField>