force-app/main/default/objects/Contact/fields/Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Date__c</fullName>
    <label>Appraisal Date</label>
    <type>Date</type>
</CustomField>