force-app/main/default/objects/Contact/fields/Asset_Received_Assigned_to_IT_Team__c.field-meta.xml
<CustomField>
    <fullName>Asset_Received_Assigned_to_IT_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Received: For IT Team</label>
    <type>Checkbox</type>
</CustomField>