force-app/main/default/objects/Contact/fields/Attend_HR_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Attend_HR_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attend HR Orientation</label>
    <type>Checkbox</type>
</CustomField>