force-app/main/default/objects/Contact/fields/Attend_One_to_One_Onboarding_with_Manage__c.field-meta.xml
<CustomField>
    <fullName>Attend_One_to_One_Onboarding_with_Manage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attend One to One Onboarding with Manage</label>
    <type>Checkbox</type>
</CustomField>