force-app/main/default/objects/Contact/fields/AvailbleUtilizedLeaves__c.field-meta.xml
<CustomField>
    <fullName>AvailbleUtilizedLeaves__c</fullName>
    <formula>1- UtlizedFloatLeaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvailbleUtilizedLeaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>