force-app/main/default/objects/Contact/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Axis Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Bandhan Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of Maharashtra</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Central Bank of India</fullName>
            </value>
            <value>
                <fullName>City Union Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>CSB Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>DCB Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Dhanlaxmi Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Federal Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>HDFC Bank Ltd</fullName>
            </value>
            <value>
                <fullName>ICICI Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>IDBI Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>IDFC First Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Indian Bank</fullName>
            </value>
            <value>
                <fullName>Indian Overseas Bank</fullName>
            </value>
            <value>
                <fullName>Induslnd Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Jammu &amp; Kashmir Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Karnataka Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Karur Vysya Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Kotak Mahindra Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Nainital Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Punjab &amp; Sind Bank</fullName>
            </value>
            <value>
                <fullName>Punjab National Bank</fullName>
            </value>
            <value>
                <fullName>RBL Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>South Indian Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>State Bank of India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>