force-app/main/default/objects/Contact/fields/Buddy_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Buddy_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buddy Assigned</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Resource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Buddy Assigned)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>