force-app/main/default/objects/Contact/fields/Collect_Joining_Kit__c.field-meta.xml
<CustomField>
    <fullName>Collect_Joining_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Joining Kit</label>
    <type>Checkbox</type>
</CustomField>