force-app/main/default/objects/Contact/fields/Collect_Your_Laptop__c.field-meta.xml
<CustomField>
    <fullName>Collect_Your_Laptop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Your Laptop</label>
    <type>Checkbox</type>
</CustomField>