force-app/main/default/objects/Contact/fields/Company_Information_Check__c.field-meta.xml
<CustomField>
    <fullName>Company_Information_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Information Check</label>
    <type>Checkbox</type>
</CustomField>