force-app/main/default/objects/Contact/fields/Complete_your_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Complete_your_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete your Onboarding</label>
    <type>Checkbox</type>
</CustomField>