force-app/main/default/objects/Contact/fields/Conduct_One_to_One_Onboarding_New_Emp__c.field-meta.xml
<CustomField>
    <fullName>Conduct_One_to_One_Onboarding_New_Emp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conduct One to One Onboarding New Emp</label>
    <type>Checkbox</type>
</CustomField>