force-app/main/default/objects/Contact/fields/Conducted_HR_Orientation_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Conducted_HR_Orientation_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conducted HR Orientation: For HR Team</label>
    <type>Checkbox</type>
</CustomField>