force-app/main/default/objects/Contact/fields/Conducted_One_to_One_Onboarding_session__c.field-meta.xml
<CustomField>
    <fullName>Conducted_One_to_One_Onboarding_session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conduct 1-1 Onboarding Session: For RM</label>
    <type>Checkbox</type>
</CustomField>