force-app/main/default/objects/Contact/fields/CP_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>CP_Sales_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Sales _ Contact</label>
    <referenceTo>CP_Sales_Contact__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>