force-app/main/default/objects/Contact/fields/Current_Active_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Assignments__c</fullName>
    <label>Current Active Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>