force-app/main/default/objects/Contact/fields/Do_you_have_a_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have a Vehicle?</label>
    <type>Checkbox</type>
</CustomField>