force-app/main/default/objects/Contact/fields/Documents_Check__c.field-meta.xml
<CustomField>
    <fullName>Documents_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Check</label>
    <type>Checkbox</type>
</CustomField>