force-app/main/default/objects/Contact/fields/EmploymentDetailsCheck__c.field-meta.xml
<CustomField>
    <fullName>EmploymentDetailsCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment Details Check</label>
    <type>Checkbox</type>
</CustomField>