force-app/main/default/objects/Contact/fields/EMS_Allocated_to_Client_Project__c.field-meta.xml
<CustomField>
    <fullName>EMS_Allocated_to_Client_Project__c</fullName>
    <businessOwnerUser>viswanath.malayathi@cloudperitus.com.prd</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <label>Allocated to Client Project</label>
    <type>Checkbox</type>
</CustomField>