force-app/main/default/objects/Contact/fields/EMS_Client_id__c.field-meta.xml
<CustomField>
    <fullName>EMS_Client_id__c</fullName>
    <displayFormat>CL.ID-{000}</displayFormat>
    <label>Client Id</label>
    <type>AutoNumber</type>
</CustomField>