force-app/main/default/objects/Contact/fields/EMS_Company_name__c.field-meta.xml
<CustomField>
    <fullName>EMS_Company_name__c</fullName>
    <label>Company Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>