force-app/main/default/objects/Contact/fields/EMS_Driving_License_No__c.field-meta.xml
<CustomField>
    <fullName>EMS_Driving_License_No__c</fullName>
    <label>Driving License No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>