force-app/main/default/objects/Contact/fields/EMS_EM_AadhaarNo__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_AadhaarNo__c</fullName>
    <label>Aadhaar Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>