force-app/main/default/objects/Contact/fields/EMS_EM_Alternate_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Alternate_Contact_Number__c</fullName>
    <label>Alternate Contact Number</label>
    <type>Phone</type>
</CustomField>