force-app/main/default/objects/Contact/fields/EMS_EM_CAddress_Line_1__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_CAddress_Line_1__c</fullName>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>