force-app/main/default/objects/Contact/fields/EMS_EM_CAddress_Line_2__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_CAddress_Line_2__c</fullName>
    <label>Address Line 2</label>
    <type>TextArea</type>
</CustomField>