force-app/main/default/objects/Contact/fields/EMS_EM_Current_Address__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Current_Address__c</fullName>
    <label>Current address</label>
    <type>TextArea</type>
</CustomField>