force-app/main/default/objects/Contact/fields/EMS_EM_Current_as_Permanent__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Current_as_Permanent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current as Permanent</label>
    <type>Checkbox</type>
</CustomField>