force-app/main/default/objects/Contact/fields/EMS_EM_Degree2__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Degree2__c</fullName>
    <label>Diploma / Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>