force-app/main/default/objects/Contact/fields/EMS_EM_DOB__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_DOB__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>