force-app/main/default/objects/Contact/fields/EMS_EM_DOW__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_DOW__c</fullName>
    <label>Date of Wedding</label>
    <type>Date</type>
</CustomField>