force-app/main/default/objects/Contact/fields/EMS_EM_ED_Name__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_ED_Name__c</fullName>
    <label>Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>