force-app/main/default/objects/Contact/fields/EMS_EM_ED_Relation__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_ED_Relation__c</fullName>
    <label>Relationship</label>
    <length>18</length>
    <type>Text</type>
</CustomField>