force-app/main/default/objects/Contact/fields/EMS_EM_Exp__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Exp__c</fullName>
    <inlineHelpText>Experience in years</inlineHelpText>
    <label>Work Experience</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>