force-app/main/default/objects/Contact/fields/EMS_EM_Father__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Father__c</fullName>
    <label>Father&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>