force-app/main/default/objects/Contact/fields/EMS_EM_Field_of_Study2__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Field_of_Study2__c</fullName>
    <label>Field of Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>