force-app/main/default/objects/Contact/fields/EMS_EM_From_Date1__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_From_Date1__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>