force-app/main/default/objects/Contact/fields/EMS_EM_HR_Assigned__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_HR_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Assigned</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Resource</value>
        </filterItems>
        <filterItems>
            <field>Contact.Resource_Role__r.Name</field>
            <operation>equals</operation>
            <value>HR Executive</value>
        </filterItems>
        <filterItems>
            <field>Contact.Resource_Role__r.Name</field>
            <operation>equals</operation>
            <value>HR Director</value>
        </filterItems>
        <filterItems>
            <field>Contact.Resource_Role__r.Name</field>
            <operation>equals</operation>
            <value>HR Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>