force-app/main/default/objects/Contact/fields/EMS_EM_JD__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_JD__c</fullName>
    <label>Date of Joining</label>
    <type>Date</type>
</CustomField>