force-app/main/default/objects/Contact/fields/EMS_EM_Job_Opening_Id__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Job_Opening_Id__c</fullName>
    <label>Job Opening Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>