force-app/main/default/objects/Contact/fields/EMS_EM_Job_Title3__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Job_Title3__c</fullName>
    <label>Job Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>