force-app/main/default/objects/Contact/fields/EMS_EM_Level_of_Education1__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Level_of_Education1__c</fullName>
    <label>Level of Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post Graduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Under Graduate(+2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>