force-app/main/default/objects/Contact/fields/EMS_EM_LR__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_LR__c</fullName>
    <label>Leave Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>