force-app/main/default/objects/Contact/fields/EMS_EM_Mstatus__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Mstatus__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>