force-app/main/default/objects/Contact/fields/EMS_EM_Nationality__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Nationality__c</fullName>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>