force-app/main/default/objects/Contact/fields/EMS_EM_NP__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_NP__c</fullName>
    <label>Notice Period (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>