force-app/main/default/objects/Contact/fields/EMS_EM_OLocation__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_OLocation__c</fullName>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
            <value>
                <fullName>Sunnyvale</fullName>
            </value>
            <value>
                <fullName>San Ramon</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>3000 Executive Parkway, San Ramon</fullName>
                <isActive>false</isActive>
                <label>3000 Executive Parkway, San Ramon</label>
            </value>
            <value>
                <fullName>36 Jubilee Hills, Hyderabad</fullName>
                <isActive>false</isActive>
                <label>36 Jubilee Hills, Hyderabad</label>
            </value>
            <value>
                <fullName>830 Stewart Dr, Sunnyvale</fullName>
                <isActive>false</isActive>
                <label>830 Stewart Dr, Sunnyvale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>