force-app/main/default/objects/Contact/fields/EMS_EM_PA_City__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_PA_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>