force-app/main/default/objects/Contact/fields/EMS_EM_PA_Zip__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_PA_Zip__c</fullName>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>