force-app/main/default/objects/Contact/fields/EMS_EM_PanNo__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_PanNo__c</fullName>
    <label>PAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>